--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
     padding: 4%;
 }
 
-div {
+section div {
     background-color: rgb(60, 90, 110);
     color: lightgray;
     margin: 2px;
