--- a/style.css
+++ b/style.css
@@ -17,19 +17,18 @@ div #point {
     padding: 0px;
 }
 
-<<<<<<< HEAD
 #Banniere {
-    background-attachment: scroll;
     position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-repeat: no-repeat;
+    background-position: top center;
+    background-size: cover;
 }
-=======
+
 #liens {
     display: flex;
     flex-direction: row;
 }
-
-
-
-
-
->>>>>>> master
