--- a/style.css
+++ b/style.css
@@ -19,8 +19,9 @@
     
     #Banniere {
         position: absolute;
-        bottom: 0;
+        top: 0;
         left: 0;
+        right: 0;
         background-repeat: no-repeat;
         background-position: top center;
         background-size: cover;
