--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@
         position: absolute;
         bottom: 0;
         left: 0;
+        width: 100%;
         background-repeat: no-repeat;
         background-position: top center;
         background-size: cover;
