--- a/style.css
+++ b/style.css
@@ -1,47 +1,46 @@
+body {
+    background-color: rgb(255, 255, 255);
+    color: rgb(225, 255, 220);
+    margin: 0px;
+    padding: 4%;
+}
 
-    body {
-        background-color: rgb(255, 255, 255);
-        color: rgb(225, 255, 220);
-        margin: 0px;
-        padding: 4%;
-    }
-    
-    section div {
-        background-color: rgb(60, 90, 110);
-        color: lightgray;
-        margin: 2px;
-        padding: 2px;
-    }
-    
-    div #point {
-        margin: 0px;
-        padding: 0px;
-    }
-    
-    #Banniere {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        background-repeat: no-repeat;
-        background-position: top center;
-        background-size: cover;
-    }
-    
-    #Title {
-        margin-top: 300px;
-    }
-    
-    #liens {
-        display: flex;
-        flex-direction: row;
-    }
-    
-    .liensIndividuels {
-        padding: 5px;
-        margin: 5px;
-    }
-    
-    .citation {
-        color: 'black';
-    }
+section div {
+    background-color: rgb(60, 90, 110);
+    color: lightgray;
+    margin: 2px;
+    padding: 2px;
+}
+
+div #point {
+    margin: 0px;
+    padding: 0px;
+}
+
+#Banniere {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-repeat: no-repeat;
+    background-position: top center;
+    background-size: cover;
+}
+
+#Title {
+    margin-top: 20vw;
+}
+
+#liens {
+    display: flex;
+    flex-direction: row;
+}
+
+.liensIndividuels {
+    padding: 5px;
+    margin: 5px;
+}
+
+.citation {
+    color: 'black';
+}
