--- a/style.css
+++ b/style.css
@@ -19,3 +19,250 @@ div #point {
 }
 
 
+
+
+
+
+
+
+
+html{
+    background-color: rgb(60, 220, 250);
+}
+p{
+    background-color: rgb(0, 140, 255);
+    color: rgb(0, 255, 20);
+    padding: 7px;
+    margin: 0px;
+    margin-left: 200px;
+    margin-right: 10%;
+}
+a{
+    color: rgb(180, 240, 255);
+}
+h1 {
+    padding: 5px;
+    margin: 0px;
+    margin-left: 200px;
+    margin-right: 10%;
+}
+h2 {
+    padding: 5px;
+    margin: 0px;
+    margin-left: 200px;
+    margin-right: 10%;
+}
+h3 {
+    padding: 5px;
+    margin: 0px;
+    margin-left: 200px;
+    margin-right: 10%;
+}
+img {
+    height: 210px;
+    width: 140px;
+}
+
+
+
+
+
+
+
+
+
+
+html{
+    background-color: rgb(40, 225, 255);
+}
+p{
+    background-color: rgb(0, 180, 255);
+    padding-right: 7px;
+    padding: 2px;
+    padding-left: 12px;
+    margin: 0px;
+    margin-left: 10%;
+    margin-right: 15%;
+    font-size: 1.3em;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 20px
+}
+#menu li ul li button{
+    background-color: rgb(1, 1, 90);
+    border-color: rgb(1, 1, 90);
+}
+#menu li ul li button:hover{
+    background-color: rgb(0, 160, 255);
+    border-color: rgb(0, 160, 255);
+}
+marquee{
+    font-size: 1.2em;
+    font-family: 'Courier New', Courier, monospace;
+    padding-left: 10%;
+    float: inherit;
+}
+h1, h2, h3 {
+    padding: 5px;
+    margin: 0px;
+    margin-left: 12%;
+    margin-right: 200px;
+}
+img{
+    height: 8%;
+    width: 8%;
+    float: left;
+}
+br{
+    margin: 2%;
+}
+form{
+    margin: 1px;
+    margin-left: 10%;
+    margin-right: 200px;
+}
+#headerlink {
+    color: rgb(0, 255, 34);
+}
+
+
+
+
+
+
+
+
+
+#menu, #menu ul /* Liste */{
+    padding : 0; /* marge intérieure */
+    margin : 0; /* ni extérieure */
+    list-style : none; /* on supprime le style par défaut de la liste */
+    line-height : 28px; /* on définit une hauteur pour chaque élément */
+    text-align : center; /* on centre le texte qui se trouve dans la liste */
+}
+#menu /* Ensemble du menu */{
+    font-weight : bold; /* on met le texte en gras */
+    font-family : DejaVu Sans Mono;
+    font-size : 15px; /* hauteur du texte : 12 pixels */
+}
+#menu a /* Contenu des listes */{
+    display : block; /* on change le type d'élément, les liens deviennent des balises de type block */
+    padding : 0; /* aucune marge intérieure */
+    background : rgb(1, 1, 90); /* couleur de fond */        
+    color : rgb(0, 160, 255); /* couleur du texte */
+    text-decoration : none; /* on supprime le style par défaut des liens (la plupart du temps = souligné) */
+    width : 170px; /* largeur */
+}
+#menu li /* Elements des listes */{ 
+    float : left; 
+    /* pour IE qui ne reconnaît pas "transparent" */
+    border-right : 1px solid rgb(0, 160, 255); /* on met une bordure blanche à droite de chaque élément */
+    box-shadow: 2px 1px 2px rgb(0, 255, 34);
+}/* IE ne reconnaissant pas le sélecteur ">" */
+html>body #menu li{
+    border-right: 1px solid transparent ; /* on met une bordure transparente à droite de chaque élément */
+}
+#menu li ul /* Sous-listes */{ 
+    position: absolute; /* Position absolue */
+    width: 170px; /* Largeur des sous-listes */
+    left: -999em; /* Hop, on envoie loin du champ de vision */
+}
+#menu li ul li /* Éléments de sous-listes */{
+    /* pour IE qui ne reconnaît pas "transparent" (comme précédemment) */
+    border-top : 1px solid rgb(0, 160, 255); /* on met une bordure blanche en haut de chaque élément d'une sous liste */
+}/* IE ne reconnaissant pas le sélecteur ">" */
+html>body #menu li ul li {
+    border-top : 1px solid transparent; /* on met une bordure transparente en haut de chaque élément */
+}
+#menu li ul ul {
+    margin: -22px 0 0 170px ; /* On décale les sous-sous-listes pour qu'elles ne soient pas au dessus des sous-listes */ 
+    /* pour IE qui ne reconnaît pas "transparent" (comme précédemment) */
+    border-left: 1px solid rgb(0, 160, 255); /* Petite bordure à gauche pour ne pas coller ... */      
+}/* IE ne reconnaissant pas le sélecteur ">" ... je me répète ;-) */
+html>body #menu li ul ul{
+    border-left: 1px solid transparent ; /* on met une bordure transparente sur la gauche de chaque élément */
+}
+
+
+
+#menu a:hover /* Lorsque la souris passe sur un des liens */{
+    color: rgb(1, 1, 90); /* On passe le texte en noir... */
+    background: rgb(0, 160, 255); /* ... et au contraire, le fond en blanc */
+}
+#menu li:hover ul ul, #menu li.sfhover ul ul /* Sous-sous-listes lorsque la souris passe sur un élément de liste */{
+    left: -999em; /* On expédie les sous-sous-listes hors du champ de vision */
+}
+#menu li:hover ul, #menu li li:hover ul, #menu li.sfhover ul, #menu li li.sfhover ul /* Sous-listes lorsque la souris passe sur un élément de liste ET sous-sous-lites lorsque la souris passe sur un élément de sous-liste */{
+    left: auto; /* Repositionnement normal */
+    min-height: 0; /* Corrige un bug sous IE */
+}
+
+
+
+
+
+
+
+
+
+.top {
+    position:relative;
+    background-color:#ffffff;
+    height:68px;
+    padding-top:20px;
+    line-height:50px;
+    overflow:hidden;
+    z-index:2;
+}
+#pagetop {
+    position:relative;
+    z-index:4;
+    font-size:18px;
+    background-color:white;
+    color:#282A35;
+    padding-left:12px;
+    padding-right:16px;
+    font-family:'Source Sans Pro', sans-serif;
+}
+
+
+
+
+
+
+
+
+
+footer {
+    align-content: center;
+}
+
+footer nav {
+    text-align: center;
+    display: flex;
+    padding: 5px;
+    align-content: center;
+}
+
+
+footer nav ul {
+    text-align: center;
+    display: flex;
+    padding: 5px;
+    align-content: center;
+}
+
+footer nav ul li {
+    text-align: center;
+    display: flex;
+    padding: 5px;
+    align-content: center;
+}
+
+footer nav ul li a {
+    text-align: center;
+    display: flex;
+    padding: 5px;
+    align-content: center;
+}
+
+
