--- a/style.css
+++ b/style.css
@@ -1,21 +1,13 @@
-body {
-    background-color: rgb(255, 255, 255);
-    color: rgb(225, 255, 220);
-    margin: 0px;
-    padding: 4%;
-}
 
-<<<<<<< HEAD
-<<<<<<< HEAD
 body {
     background-color: rgb(20, 20, 40);
     color: rgb(225, 255, 220);
+    padding: 0px;
     margin: 0px;
-    padding: 4%;
+    overflow-x: hidden;
+    overflow-y: scroll;
 }
 
-=======
->>>>>>> e7687d16de2bcef0f37c3cbc1a41c3a6f5f6cd32
 section div {
     background-color: rgb(60, 90, 110);
     color: lightgray;
@@ -26,19 +18,6 @@ section div {
 div #point {
     margin: 0px;
     padding: 0px;
-}
-
-<<<<<<< HEAD
-
-
-
-
-
-
-
-
-html{
-    background-color: rgb(60, 220, 250);
 }
 p{
     background-color: rgb(0, 140, 255);
@@ -83,9 +62,7 @@ img {
 
 
 
-html{
-    background-color: rgb(40, 225, 255);
-}
+
 p{
     background-color: rgb(0, 180, 255);
     padding-right: 7px;
@@ -154,6 +131,7 @@ form{
     font-weight : bold; /* on met le texte en gras */
     font-family : DejaVu Sans Mono;
     font-size : 15px; /* hauteur du texte : 12 pixels */
+    padding-left: 5%;
 }
 #menu a /* Contenu des listes */{
     display : block; /* on change le type d'élément, les liens deviennent des balises de type block */
@@ -217,19 +195,21 @@ html>body #menu li ul ul{
 
 .top {
     position:relative;
-    background-color:#ffffff;
-    height:68px;
-    padding-top:20px;
-    line-height:50px;
+    height:140px;
     overflow:hidden;
     z-index:2;
+    margin: 0px;
+    padding: 0px;
+}
+#Banniere {
+    margin : 0px;
+    display: block;
+    height: 140px;
 }
 #pagetop {
-    position:relative;
-    z-index:4;
+    position:sticky;
+    top: 0;
     font-size:18px;
-    background-color:white;
-    color:#282A35;
     padding-left:12px;
     padding-right:16px;
     font-family:'Source Sans Pro', sans-serif;
@@ -250,7 +230,6 @@ footer {
 footer nav {
     text-align: center;
     display: flex;
-    padding: 5px;
     align-content: center;
 }
 
@@ -258,74 +237,65 @@ footer nav {
 footer nav ul {
     text-align: center;
     display: flex;
-    padding: 5px;
     align-content: center;
 }
 
 footer nav ul li {
     text-align: center;
     display: flex;
-    padding: 5px;
     align-content: center;
 }
 
 footer nav ul li a {
     text-align: center;
     display: flex;
-    padding: 5px;
     align-content: center;
 }
 
 
-=======
-    body {
-        background-color: rgb(255, 255, 255);
-        color: rgb(225, 255, 220);
-        margin: 0px;
-        padding: 4%;
-    }
-    
-    section div {
-        background-color: rgb(60, 90, 110);
-        color: lightgray;
-        margin: 2px;
-        padding: 2px;
-    }
-    
-    div #point {
-        margin: 0px;
-        padding: 0px;
-    }
-    
-    #Banniere {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        background-repeat: no-repeat;
-        background-position: top center;
-        background-size: cover;
-    }
-    
-    #Title {
-        margin-top: 300px;
-    }
-    
-    #liens {
-        display: flex;
-        flex-direction: row;
-    }
-    
-    .liensIndividuels {
-        padding: 5px;
-        margin: 5px;
-    }
-    
-    .citation {
-        color: 'black';
-    }
->>>>>>> 490621dbf00a51b23c064f7c77604105bc3ddcb3
-=======
+
+
+section div {
+    background-color: rgb(60, 90, 110);
+    color: lightgray;
+    margin: 2px;
+    padding: 2px;
+}
+
+div #point {
+    margin: 0px;
+    padding: 0px;
+}
+
+#Banniere {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-repeat: no-repeat;
+    background-position: top center;
+    background-size: cover;
+}
+
+#Title {
+    margin-top: 300px;
+}
+
+#liens {
+    display: flex;
+    flex-direction: row;
+}
+
+.liensIndividuels {
+    padding: 5px;
+    margin: 5px;
+}
+
+.citation {
+    color: 'black';
+}
+
+
 #Banniere {
     position: absolute;
     top: 0;
@@ -353,4 +323,3 @@ footer nav ul li a {
 .citation {
     color: 'black';
 }
->>>>>>> e7687d16de2bcef0f37c3cbc1a41c3a6f5f6cd32
